# djangocms-picture

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  Makefile  README.md  README.rst  TICKET_PICTUREFIELD_VISION.md  USAGE_EXAMPLE.md  addon.json  aldryn_config.py  conftest.py  pyproject.toml  requirements.txt  runtests.py  schemamigration.py  setup.cfg  setup.py  tox.ini
.github/workflows/: lint-pr.yml  lint.yml  publish-to-live-pypi.yml  publish-to-test-pypi.yml  test.yml
.tx/: config
djangocms_image/: cms_plugins.py  models.py
djangocms_image/migrations/: 0002_auto_20151018_1927.py  0003_migrate_to_filer.py  0004_adapt_fields.py
djangocms_picture/: __init__.py  cms_plugins.py  fields.py  forms.py  helpers.py  models.py  settings.py  types.py
djangocms_picture/backends/: __init__.py  filer.py
djangocms_picture/fields/: __init__.py  forms.py
djangocms_picture/migrations/: 0001_initial.py  0002_auto_20151018_1927.py  0003_migrate_to_filer.py  0003_set_related_name_for_cmsplugin_ptr.py  0004_adapt_fields.py  0005_reset_null_values.py  0006_remove_null_values.py  0007_fix_alignment.py  0008_picture_use_responsive_image.py  0009_auto_20181212_1003.py  0010_auto_20190313_2044.py  0010_auto_20190314_1536.py  0010_auto_20190627_0432.py  0011_auto_20190314_1536.py  0012_alter_picture_cmsplugin_ptr.py  0012_auto_20220504_2117.py
djangocms_picture/migrations_django/: 0001_initial.py  0002_picture_style.py
djangocms_picture/south_migrations/: 0002_auto__add_field_picture_width__add_field_picture_height.py
djangocms_picture/tests/: settings.py  test_cms_plugins.py  test_models.py
djangocms_picture/widgets/: __init__.py
tests/: fixtures.py  helpers.py  requirements.txt  settings.py  test_backends.py  test_forms.py  test_migrations.py  test_models.py  test_plugins.py  test_reusable_fields.py  test_widgets.py  tests_cms_plugins.py  tests_models.py  urls.py
tests/requirements/: base.txt  compile.py  dj40_cms310.txt  dj50_cms41.txt  dj52_cms51.txt  dj60_cms50.txt  dj60_cms51.txt  py310-django32-cms310.txt  py310-django32-cms38.txt  py310-django32-cms39.txt  py310-django42-cms311.txt  py310-django42-cms41.txt  py311-django42-cms311.txt  py311-django42-cms41.txt  py312-django42-cms311.txt  py312-django42-cms41.txt  (+11 more)
(+185 files in other folders)
